python_sources = [
  '__init__.py',
  '_backend.py',
  '_basic.py',
  '_basic_backend.py',
  '_debug_backends.py',
  '_fftlog.py',
  '_fftlog_backend.py',
  '_helper.py',
  '_realtransforms.py',
  '_realtransforms_backend.py'
]


py3.install_sources(
  python_sources,
  subdir: 'scipy/fft'
)

subdir('_pocketfft')
subdir('tests')
